# Jobs-Parser

./: README.md  pyproject.toml
src/: jobs.py  main.py  saver.py  utils.py  vacancy.py
tests/: test_jobs.py  test_saver.py  test_vacancy.py
